--- a/2/sss.css
+++ b/2/sss.css
@@ -60,3 +60,11 @@ a:hover {
 @media screen and (max-width:450px) {
 
 }
+#Skills{
+    height: 300px;
+    border-right: 1px solid #0aaeef;
+}
+#Hobbies{
+    height: 20px;
+
+}
